// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceProvidersListItemDetailComponent should match the snapshot with default values for desktop viewport 1`] = `
<div>
  <div
    class="item fr-mb-3w"
    data-testid="ServiceProvidersListItemComponent"
  >
    <div
      class="is-flex flex-between fr-mb-3v"
    >
      <span>
        Portail des demandes de badges Ségur-Fontenoy
      </span>
      <div>
        BadgeComponent
      </div>
    </div>
    <div
      class="details fr-text--md fr-mb-3w"
    >
      <div>
        ServiceProvidersListItemDetailComponent
      </div>
      <div>
        ServiceProvidersListItemDetailComponent
      </div>
      <div>
        ServiceProvidersListItemDetailComponent
      </div>
      <div>
        ServiceProvidersListItemDetailComponent
      </div>
    </div>
  </div>
</div>
`;

exports[`ServiceProvidersListItemDetailComponent should match the snapshot with default values for mobile viewport 1`] = `
<div>
  <div
    class="item fr-mb-2w"
    data-testid="ServiceProvidersListItemComponent"
  >
    <div
      class="flex-rows flex-column-reverse fr-my-1w"
    >
      <span>
        Portail des demandes de badges Ségur-Fontenoy
      </span>
      <div>
        BadgeComponent
      </div>
    </div>
    <div
      class="details fr-text--sm fr-mb-2w"
    >
      <div>
        ServiceProvidersListItemDetailComponent
      </div>
      <div>
        ServiceProvidersListItemDetailComponent
      </div>
      <div>
        ServiceProvidersListItemDetailComponent
      </div>
      <div>
        ServiceProvidersListItemDetailComponent
      </div>
    </div>
  </div>
</div>
`;
